--- a/template/index.html
+++ b/template/index.html
@@ -15,7 +15,7 @@ var images = imageString.split(" ").map(function(img) {
 
 
 var image = document.createElement('img')
-image.src = images[0]
+image.src = './'+images[0]
 
 document.body.appendChild(image)
 
@@ -23,7 +23,8 @@ var transition = setInterval(function() {
   var relativeImageName = image.src.match(/[^\/]+\.jpg$/)[0]
   var currentIndex = images.indexOf(relativeImageName)
   var nextIndex = (currentIndex+1) % (images.length-1)
-  image.src = images[nextIndex]
+  var nextImage = './'+images[nextIndex]
+  image.src = nextImage
 }, 11000)
 </script>
 </body>
