--- a/template/index.html
+++ b/template/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="http://mia-grotesk.s3.amazonaws.com/index.css" type="text/css" media="screen" />
 </head>
-<body style="background-color:black;color:white;margin:0px;width:1920px; height: 1080px;">
+<body style="background-color:black;color:white;margin:0px;width:1920px; height: 1080px; overflow: hidden;">
 
 <script>
 var name = "__NAME"
@@ -64,9 +64,10 @@ img {
   font-family: MiaGrotesk-Light;
   position: absolute;
   bottom: 4em;
-  right: 4em;
+  right: 6em;
   max-width: 34%;
   line-height: 3.7em;
+  text-align: right;
 }
 
 .caption {
