skip exhibitions that have ended

--- a/template/index.html
+++ b/template/index.html
@@ -54,9 +54,13 @@ var transition = setInterval(function() {
 
   if(captionJson) {
     var info = captionJson[images[nextIndex]]
-    while(info.location == 'Not on View') {
+    console.info(info)
+    // skip to the next if:
+    // an object is not on view per TMS
+    // or an exhibition has ended per the calendar
+    while(info.location == 'Not on View' || info.dateTo && new Date(info.dateTo) < new Date()) {
       images.splice(nextIndex, 1)
-      console.info('id not on view, skipping', info)
+      console.info('not on view or ended, skipping', info)
       info = captionJson[images[nextIndex]]
     }
   }
