--- a/template/index.html
+++ b/template/index.html
@@ -7,7 +7,7 @@
 <body style="background-color:black;color:white;margin:0px;width:1920px; height: 1080px; overflow: hidden;">
 
 <script>
-var name = "__NAME"
+var name = "__NAME__"
 var imageString = "__IMAGES__"
 var caption = `__CAPTION__`
 
