--- a/template/index.html
+++ b/template/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="http://mia-grotesk.s3.amazonaws.com/index.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="https://mia-grotesk.s3.amazonaws.com/index.css" type="text/css" media="screen" />
 </head>
 <body style="background-color:black;color:white;margin:0px;width:1920px; height: 1080px; overflow: hidden;">
 
