babel-polyfill for fancy JS
it brings the pi's older version of chrome in line with mine

--- a/template/index.html
+++ b/template/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://mia-grotesk.s3.amazonaws.com/index.css" type="text/css" media="screen" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.23.0/polyfill.min.js"></script>
 </head>
 <body style="background-color:black;color:white;margin:0px;width:1920px; height: 1080px; overflow: hidden;">
 
