--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://mia-grotesk.s3.amazonaws.com/index.css" type="text/css" media="screen" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.23.0/polyfill.min.js"></script>
 </head>
-<body style="background-color:black;color:white;margin:0px;width:1920px; height: 1080px; overflow: hidden;">
+<body style="background-color:black;color:white;margin:0px;width:100vw; height: 100vh; overflow: hidden;">
 
 <script>
 var name = "__NAME__"
@@ -18,13 +18,14 @@ var caption = `__CAPTION__`
 img {
   position: absolute;
   top: 0;
+  max-width: 100%;
 }
 
 .gradient-overlay {
   position: absolute;
   z-index: 1;
-  width: 1920px;
-  height: 1080px;
+  width: 100vw;
+  height: 100vh;
   background: radial-gradient(at bottom right,
     rgba(0, 0, 0, 0.5),
     rgba(0, 0, 0, 0.25),
