Power and Beauty Signage

--- a/template/index.html
+++ b/template/index.html
@@ -8,8 +8,8 @@
 <body style="background-color:black;color:white;margin:0px;width:100vw; height: 100vh; overflow: hidden;">
 
 <script>
-var name = "__NAME__"
-var imageString = "__IMAGES__"
+var name = '__NAME__'
+var imageString = '__IMAGES__'
 var caption = `__CAPTION__`
 </script>
 <script src="./app.js"></script>
@@ -26,11 +26,6 @@ img {
   z-index: 1;
   width: 100vw;
   height: 100vh;
-  background: radial-gradient(at bottom right,
-    rgba(0, 0, 0, 0.5),
-    rgba(0, 0, 0, 0.25),
-    rgba(0, 0, 0, 0.05),
-    rgba(0, 0, 0, 0));
 }
 
 .caption {
@@ -57,4 +52,3 @@ img {
 </style>
 </body>
 </html>
-
