--- a/template/index.html
+++ b/template/index.html
@@ -26,6 +26,11 @@ img {
   z-index: 1;
   width: 100vw;
   height: 100vh;
+  background: radial-gradient(at bottom right,
+   rgba(0, 0, 0, 0.5),
+   rgba(0, 0, 0, 0.25),
+   rgba(0, 0, 0, 0.05),
+   rgba(0, 0, 0, 0));
 }
 
 .caption {
