use `` string to avoid problems with '

--- a/template/index.html
+++ b/template/index.html
@@ -9,7 +9,7 @@
 
 <script>
 var name = '__NAME__'
-var imageString = '__IMAGES__'
+var imageString = `__IMAGES__`
 var caption = `__CAPTION__`
 </script>
 <script src="./app.js"></script>
