indicate when a sponsor logo is queued
if a sponsor logo is set to appear within 12 hours, show a timer icon at
the bottom left of the screen to reassure concerned stakeholders

--- a/template/index.html
+++ b/template/index.html
@@ -54,6 +54,15 @@ img {
 .caption h1, .caption strong {
   font-family: MiaGrotesk-Bold;
 }
+
+#timer {
+  position: absolute;
+	bottom: 0.5em;
+	left: 0.7em;
+	font-size: 2.3em;
+	display: none;
+}
 </style>
+<div id="timer" style="display: none;">⏲</div>
 </body>
 </html>
