--- a/template/index.html
+++ b/template/index.html
@@ -41,6 +41,12 @@ img {
   max-width: 43%;
   line-height: 3.7em;
   text-align: right;
+
+  animation-name: moveText;
+  animation-duration: 99s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+
 }
 
 .caption {
@@ -53,6 +59,24 @@ img {
 
 .caption h1, .caption strong {
   font-family: MiaGrotesk-Bold;
+}
+
+@keyframes moveText {
+   from {
+     transform: translate3d(0, 0, 0);
+   }
+   23% { 
+     transform: translate3d(0, -3em, 0);
+   }
+   47% {
+     transform: translate3d(-3em, -3em, 0);
+   }
+   77% {
+     transform: translate3d(-3em, 0, 0);
+   }
+   to {
+     transform: translate3d(0, 0, 0);
+   }
 }
 
 #timer {
